[gd_scene load_steps=15 format=2]

[ext_resource path="res://Interface/HUD/heart64x64.png" type="Texture" id=1]
[ext_resource path="res://Interface/HUD/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://Interface/HUD/coin64x64.png" type="Texture" id=3]
[ext_resource path="res://Fonts/cursed-timer-ulil-font/CursedTimerUlil-Aznm.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Interface/HUD/HUD.gd" type="Script" id=5]
[ext_resource path="res://Interface/HUD/battery64x64.png" type="Texture" id=6]
[ext_resource path="res://Fonts/evil-empire-font/EvilEmpire-4BBVK.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Interface/Messages/Messages.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 2
outline_color = Color( 0.376471, 0.376471, 0.376471, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 2
outline_color = Color( 0.380392, 0.380392, 0.380392, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=6]
resource_name = "Expand"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ObjectiveImage:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ObjectiveLabel:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 38
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_left = -0.000921786
anchor_top = 0.00157313
anchor_right = 0.999078
anchor_bottom = 1.00157
margin_left = -2.35114
margin_top = 2.91234
margin_right = -2.35114
margin_bottom = 2.91235
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeCoinContainer" type="NinePatchRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -356.0
margin_top = 20.0
margin_right = -21.0
margin_bottom = 70.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/LifeCoinContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_right = 25.0
margin_bottom = 14.0
rect_scale = Vector2( 0.9, 0.9 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCount" type="Label" parent="Control/LifeCoinContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 87.0
margin_bottom = 53.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.901961, 0.270588, 1 )
text = "0"
align = 2

[node name="CoinIcon" type="TextureRect" parent="Control/LifeCoinContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 155.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Control/LifeCoinContainer/HBoxContainer"]
margin_left = 159.0
margin_top = 25.0
margin_right = 247.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = " "

[node name="LifeCount" type="Label" parent="Control/LifeCoinContainer/HBoxContainer"]
margin_left = 251.0
margin_top = 10.0
margin_right = 277.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.905882, 0.141176, 0.141176, 1 )
text = "3"
align = 2

[node name="LifeIcon" type="TextureRect" parent="Control/LifeCoinContainer/HBoxContainer"]
margin_left = 281.0
margin_right = 345.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="BatteryLife" type="NinePatchRect" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 70.0
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatteryIcon" type="TextureRect" parent="Control/BatteryLife"]
margin_left = -0.659866
margin_top = -16.8865
margin_right = 63.3401
margin_bottom = 47.1135
rect_scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control/BatteryLife"]
self_modulate = Color( 0, 1, 0.0627451, 1 )
margin_left = 87.7081
margin_top = 6.42168
margin_right = 287.708
margin_bottom = 42.4217
rect_min_size = Vector2( 200, 36 )
custom_fonts/font = SubResource( 3 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Control" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -599.998
margin_right = 40.0
margin_bottom = -559.998
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatteryLife" type="NinePatchRect" parent="Control/Objective"]
margin_left = 10.9109
margin_top = 533.814
margin_right = 510.911
margin_bottom = 583.814
rect_min_size = Vector2( 600, 50 )
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveLabel" type="Label" parent="Control/Objective"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 92.0188
margin_top = 508.833
margin_right = 312.019
margin_bottom = 541.833
rect_scale = Vector2( 1.07973, 1.07973 )
custom_fonts/font = SubResource( 5 )
text = "Objective: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveImage" type="TextureRect" parent="Control/Objective"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.7997
margin_top = 481.803
margin_right = 82.7997
margin_bottom = 545.803
rect_scale = Vector2( 1.07973, 1.07973 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveAnimation" type="AnimationPlayer" parent="Control/Objective"]
autoplay = "Expand"
anims/Expand = SubResource( 6 )

[node name="Messages" parent="Control" instance=ExtResource( 8 )]

[node name="Level" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.4906
margin_top = 28.0573
margin_right = 35.5094
margin_bottom = 68.0573
custom_fonts/font = SubResource( 7 )
text = "Level 0"
__meta__ = {
"_edit_use_anchors_": false
}
